tests/ui/issues/issue-92741.stderr
error[E0308]: mismatched types
  --> $DIR/issue-92741.rs:3:5
   |
LL |   fn foo() -> bool {
   |               ---- expected `bool` because of return type
LL | /     &
LL | |     mut
LL | |     if true { true } else { false }
   | |___________________________________^ expected `bool`, found `&mut bool`
   |
help: consider removing the borrow
   |
LL -     &
LL -     mut
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
